new proj/src/objects/GE_HQ_Outage_Event_Oppty__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Expected_Order_Date__c</fullName>
        <formula>GE_HQ_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Opportunity_Amount__c</fullName>
        <formula>GE_HQ_Opportunity__r.GE_ES_Pipeline_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Outage_Event_Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Outage_Event__c</fullName>
        <label>Unit Event</label>
        <referenceTo>GE_HQ_Outage_Event__c</referenceTo>
        <relationshipName>Outage_Event_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Outage_Start_Date__c</fullName>
        <formula>GE_HQ_Outage_Event__r.GE_HQ_Otg_St_Dt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Outage_Type__c</fullName>
        <formula>TEXT( GE_HQ_Outage_Event__r.GE_HQ_Otg_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_S_N_Equip_Name__c</fullName>
        <formula>GE_HQ_Outage_Event__r.GE_HQ_GE_S_N__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE S/N - Equip. Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Stage__c</fullName>
        <formula>TEXT(GE_HQ_Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <label>Unit Event Opportunity</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Outage Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Event Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>